Enable docker build.